--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -25,7 +25,14 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <title>React App</title>
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="mega-menu.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="mega-menu.js"></script>
+    <title>iOG</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
