Manisha added changes

--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/iog.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -32,7 +32,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="mega-menu.js"></script>
-    <title>iOG</title>
+    <title>iOG : Oil and gas software consulting, training services for upstream and downstream</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
