Amit added changes

--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -23,6 +23,9 @@
 
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
+
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
