--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -29,6 +29,7 @@
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
