--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -28,11 +28,16 @@
     
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <title>iOG : Oil and gas software consulting, training services for upstream and downstream</title>
   </head>
