--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -51,6 +51,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <title>iOG : Oil and gas software consulting, training services for upstream and downstream</title>
+    <style>
+      body {background-image: url("/images/spin-Preloader.gif");
+            background-repeat: no-repeat;
+            background-size: 98% 100%;}
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
