--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -33,16 +33,16 @@
     function googleTranslateElementInit() {
 
 
-      new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'es', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
     }
 
   function triggerHtmlEvent(element, eventName) {
     var event;
     if (document.createEvent) {
 
-    jQuery('#flag_div').click(function() {
+    /*jQuery('#flag_div').click(function() {
     window.location.reload();
-    });
+    });*/
     event = document.createEvent('HTMLEvents');
     event.initEvent(eventName, true, true);
     element.dispatchEvent(event);
@@ -55,14 +55,19 @@
   }
 
   jQuery('.lang-select').click(function() {
+    location.reload();
     var theLang = jQuery(this).attr('data-lang');
     jQuery('.goog-te-combo').val(theLang);
 
 
     //alert(jQuery(this).attr('href'));
-    window.location = jQuery(this).attr('href');
+    window.location = jQuery(this).attr('href').reload();
 
   });
+  jQuery('#ar_lang').click(function() {
+   window.re
+  });
+
   </script>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
