--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -33,7 +33,12 @@
     function googleTranslateElementInit() {
 
 
-      new google.translate.TranslateElement({pageLanguage: 'es', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'bg', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
+       
+
+
+
+
     }
 
   function triggerHtmlEvent(element, eventName) {
@@ -57,6 +62,10 @@
   jQuery('.lang-select').click(function() {
     location.reload();
     var theLang = jQuery(this).attr('data-lang');
+    console.log("theLang",theLang);
+    if(theLang=="fr"){
+      $('#dropdownFr').css('color','red');
+    }
     jQuery('.goog-te-combo').val(theLang);
 
 
@@ -64,9 +73,7 @@
     window.location = jQuery(this).attr('href').reload();
 
   });
-  jQuery('#ar_lang').click(function() {
-   window.re
-  });
+  
 
   </script>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
