Karuna added changes

--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -143,7 +143,7 @@ function googleTranslateElementInit() {
 
 
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet"> -->
     
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
