Karuna added changes

--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -62,7 +62,7 @@
   jQuery('.lang-select').click(function() {
     location.reload();
     var theLang = jQuery(this).attr('data-lang');
-    console.log("theLang",theLang);
+    console.log("data-lang",data-lang);
     if(theLang=="fr"){
       $('#dropdownFr').css('color','red');
     }
