Karuna added chnages

--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -63,9 +63,9 @@
     location.reload();
     var theLang = jQuery(this).attr('data-lang');
     console.log("data-lang",data-lang);
-    if(theLang=="fr"){
-      $('#dropdownFr').css('color','red');
-    }
+    // if(theLang=="fr"){
+    //   $('#dropdownFr').css('color','red');
+    // }
     jQuery('.goog-te-combo').val(theLang);
 
 
