Karuna Added arabic translation issue

--- a/ui/website/public/index.html
+++ b/ui/website/public/index.html
@@ -33,7 +33,7 @@
     function googleTranslateElementInit() {
 
 
-      new google.translate.TranslateElement({pageLanguage: 'bg', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
       console.log("pageLanguage",pageLanguage);
        
 
